Preliminary bounding area rotation & fixes - Preliminary rotation of bounding box (currently does not affect actual mission search area & has distortion errors) - Fixes to VLD message handling - Fixes to START message not being send to detailed search devices

--- a/code/globalStyle.css
+++ b/code/globalStyle.css
@@ -111,6 +111,46 @@ input[type=text] {
    border-right: 0px;
 }
 
+input[type=range] {
+   outline: none;
+
+   margin-top: 15px;
+   margin-bottom: 15px;
+
+   -webkit-appearance: none;
+   height: 5px;
+   width:75%;
+
+   background: #d3d3d3;
+}
+
+input[type=range]::-webkit-slider-thumb {
+   -webkit-appearance:none;
+
+   width:15px;
+   height:15px;
+   border-radius:15px;
+   background: #59cc33;
+   cursor: pointer;
+}
+
+input[type=range]::-webkit-slider-thumb:hover {
+
+   width:20px;
+   height:20px;
+   border-radius:15px;
+   background: #63e23a;
+}
+
+input[type=range]::-webkit-slider-thumb:active {
+
+   width:20px;
+   height:20px;
+   border-radius:15px;
+   background: #6e9063;
+}
+
+
 object {
    width: 100%;
    height: 100%;
